--- a/apps/websocket-server/package.json
+++ b/apps/websocket-server/package.json
@@ -12,12 +12,18 @@
     "@shipvibes/database": "workspace:*",
     "@shipvibes/shared": "workspace:*",
     "@shipvibes/storage": "workspace:*",
+    "@types/adm-zip": "^0.5.7",
+    "adm-zip": "^0.5.16",
+    "archiver": "^7.0.1",
     "cors": "^2.8.5",
     "diff": "^5.2.0",
     "dotenv": "^16.5.0",
+    "form-data": "^4.0.0",
+    "node-fetch": "^3.3.2",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
+    "@types/archiver": "^6.0.2",
     "@types/cors": "^2.8.17",
     "@types/node": "^20.11.24",
     "tsx": "^4.7.1",
