--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,8 @@
     "@shipvibes/database": "workspace:*",
     "@shipvibes/shared": "workspace:*",
     "@shipvibes/storage": "workspace:*",
+    "@supabase/ssr": "^0.6.1",
+    "@supabase/supabase-js": "^2.49.9",
     "@tanstack/react-query": "^5.79.0",
     "archiver": "^7.0.1",
     "class-variance-authority": "^0.7.0",
