--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,13 +17,18 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.9",
     "@tanstack/react-query": "^5.79.0",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "archiver": "^7.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "csstype": "^3.1.3",
+    "geist": "^1.4.2",
     "lucide-react": "^0.294.0",
     "next": "^15.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-syntax-highlighter": "^15.6.1",
+    "react-tooltip": "^5.28.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
