--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,6 +10,10 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@shipvibes/database": "workspace:*",
     "@shipvibes/shared": "workspace:*",
@@ -25,6 +29,7 @@
     "geist": "^1.4.2",
     "lucide-react": "^0.294.0",
     "next": "^15.1.0",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-syntax-highlighter": "^15.6.1",
