--- a/apps/websocket-server/package.json
+++ b/apps/websocket-server/package.json
@@ -18,6 +18,7 @@
     "cors": "^2.8.5",
     "diff": "^5.2.0",
     "dotenv": "^16.5.0",
+    "express": "^4.19.2",
     "form-data": "^4.0.0",
     "node-fetch": "^3.3.2",
     "socket.io": "^4.7.5"
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@types/archiver": "^6.0.2",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/node": "^20.11.24",
     "tsx": "^4.7.1",
     "typescript": "^5.2.2"
