--- a/env.example
+++ b/env.example
@@ -26,6 +26,7 @@ NETLIFY_ACCESS_TOKEN=your-netlify-access-token
 # WebSocket Server Configuration
 WS_PORT=8080
 ALLOWED_ORIGINS=http://localhost:3000,https://shipvibes.dev
+WEBSOCKET_SERVER_URL=http://localhost:8080
 
 # Next.js Configuration
 NEXT_PUBLIC_WS_URL=ws://localhost:8080
