--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.478.0",
-    "dotenv": "^16.5.0"
+    "dotenv": "^16.5.0",
+    "shiki": "^3.4.2"
   }
 }
