--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,45 +3,46 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 3004",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
-    "@radix-ui/react-progress": "^1.1.7",
     "@radix-ui/react-slot": "^1.0.2",
     "@shipvibes/database": "workspace:*",
     "@shipvibes/shared": "workspace:*",
-    "@shipvibes/storage": "workspace:*",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.9",
     "@tanstack/react-query": "^5.79.0",
+    "@types/jsonwebtoken": "^9.0.9",
+    "@types/node-fetch": "^2.6.12",
     "@types/react-syntax-highlighter": "^15.5.13",
-    "archiver": "^7.0.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "csstype": "^3.1.3",
+    "dotenv": "^16.5.0",
     "geist": "^1.4.2",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
     "next": "^15.1.0",
     "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-syntax-highlighter": "^15.6.1",
     "react-tooltip": "^5.28.1",
+    "shiki": "^3.4.2",
     "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.8",
-    "@tailwindcss/typography": "^0.5.16",
-    "@types/archiver": "^6.0.3",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
@@ -49,6 +50,7 @@
     "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.3.3",
+    "eslint-plugin-unused-imports": "^4.1.4",
     "postcss": "^8.5.4",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.0.0"
