--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,10 +14,15 @@
   "dependencies": {
     "@ngrok/ngrok": "^1.5.1",
     "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-dialog": "^1.1.14",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toggle": "^1.1.9",
+    "@radix-ui/react-tooltip": "^1.2.7",
     "@shipvibes/database": "workspace:*",
     "@shipvibes/shared": "workspace:*",
     "@supabase/ssr": "^0.6.1",
