--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "@types/node": "^20.8.0",
     "concurrently": "^8.2.2",
     "depcheck": "^1.4.7",
-    "turbo": "^1.10.16",
     "tsx": "^4.6.0",
+    "turbo": "^1.10.16",
     "typescript": "^5.2.2"
   },
   "packageManager": "pnpm@8.10.0",
@@ -36,6 +36,8 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.478.0",
+    "@radix-ui/react-scroll-area": "^1.2.9",
+    "@radix-ui/react-separator": "^1.1.7",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node-fetch": "^2.6.12",
     "dotenv": "^16.5.0",
