--- a/apps/websocket-server/nixpacks.toml
+++ b/apps/websocket-server/nixpacks.toml
@@ -3,19 +3,14 @@ nixPkgs = ["nodejs_18"]
 
 [phases.install]
 cmds = [
-  "export SHELL=/bin/bash",
-  "curl -fsSL https://get.pnpm.io/install.sh | SHELL=/bin/bash sh -",
-  "export PATH=\"$HOME/.local/share/pnpm:$PATH\"",
-  "cd ../..",
-  "$HOME/.local/share/pnpm/pnpm install",
-  "cd apps/websocket-server"
+  "export SHELL=/bin/bash && curl -fsSL https://get.pnpm.io/install.sh | SHELL=/bin/bash sh -",
+  "cd ../.. && $HOME/.local/share/pnpm/pnpm install"
 ]
 
 [phases.build]
 cmds = [
-  "cd apps/websocket-server",
-  "$HOME/.local/share/pnpm/pnpm build"
+  "cd ../.. && cd apps/websocket-server && $HOME/.local/share/pnpm/pnpm build"
 ]
 
 [start]
-cmd = "cd apps/websocket-server && $HOME/.local/share/pnpm/pnpm start" 
+cmd = "cd ../.. && cd apps/websocket-server && $HOME/.local/share/pnpm/pnpm start" 
