Build shared and database packages before websocket-server

--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -9,6 +9,8 @@ cmds = [
 
 [phases.build]
 cmds = [
+  "cd packages/shared && $HOME/.local/share/pnpm/pnpm build",
+  "cd packages/database && $HOME/.local/share/pnpm/pnpm build", 
   "cd apps/websocket-server && $HOME/.local/share/pnpm/pnpm build"
 ]
 
