--- a/apps/websocket-server/tsconfig.json
+++ b/apps/websocket-server/tsconfig.json
@@ -2,7 +2,7 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "outDir": "./dist",
-    "module": "ESNext",
+    "module": "CommonJS",
     "target": "ES2022",
     "moduleResolution": "node",
     "allowSyntheticDefaultImports": true,
