--- a/apps/websocket-server/package.json
+++ b/apps/websocket-server/package.json
@@ -17,7 +17,7 @@
     "dotenv": "^16.5.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "node-fetch": "^3.3.2",
+    "node-fetch": "^2.6.12",
     "socket.io": "^4.7.5"
   },
   "devDependencies": {
@@ -27,5 +27,8 @@
     "@types/node": "^20.11.24",
     "tsx": "^4.7.1",
     "typescript": "^5.2.2"
+  },
+  "resolutions": {
+    "adm-zip": "^0.5.16"
   }
 }
