--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -4,7 +4,7 @@ nixPkgs = ["nodejs_18"]
 [phases.install]
 cmds = [
   "export SHELL=/bin/bash && curl -fsSL https://get.pnpm.io/install.sh | SHELL=/bin/bash sh -",
-  "$HOME/.local/share/pnpm/pnpm install"
+  "$HOME/.local/share/pnpm/pnpm install --no-frozen-lockfile"
 ]
 
 [phases.build]
