🔧 Fix: Ignore Vite temporary files in sync agent (v1.0.1)

--- a/env.example
+++ b/env.example
@@ -36,6 +36,10 @@ WS_PORT=8080
 ALLOWED_ORIGINS=http://localhost:3000,https://shipvibes.dev
 WEBSOCKET_SERVER_URL=http://localhost:8080
 
+# Environment Configuration (для правильного WebSocket URL в шаблонах)
+NODE_ENV=development  # для локальной разработки используем ws://localhost:8080
+# NODE_ENV=production  # для продакшена используем wss://api.vybcel.com
+
 # Ngrok Configuration (для development webhooks)
 NGROK_AUTHTOKEN=your-ngrok-authtoken
 
