--- a/env.example
+++ b/env.example
@@ -31,6 +31,12 @@ R2_BUCKET_NAME=shipvibes-storage
 # Netlify Configuration
 NETLIFY_ACCESS_TOKEN=your-netlify-access-token
 
+# 21st.dev Subscription API (для проверки подписок)
+SUBSCRIPTION_API_KEY=your-21st-dev-api-key
+
+# Development: Skip subscription check (set to 'true' to bypass subscription validation in dev)
+SKIP_SUBSCRIPTION_CHECK=false
+
 # WebSocket Server Configuration
 WS_PORT=8080
 ALLOWED_ORIGINS=http://localhost:3000,https://shipvibes.dev
