--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -39,6 +39,7 @@
     "geist": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
+    "motion": "^12.17.0",
     "next": "^15.1.0",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
