--- a/templates/vite-react/package.json
+++ b/templates/vite-react/package.json
@@ -8,14 +8,14 @@
     "build": "vite build",
     "preview": "vite preview",
     "sync": "vybcel",
-    "start": "pnpm install && (pnpm dev & pnpm sync)",
+    "start": "pnpm install && node scripts/start-with-browser.js",
+    "fix": "node scripts/fix-vybcel.js",
+    "setup:browser": "node scripts/install-browser-extension.js",
+    "clear:ports": "node -e \"require('child_process').exec(process.platform === 'win32' ? 'for /f \\\"tokens=5\\\" %a in (\\'netstat -ano ^| findstr :5173\\') do taskkill /F /PID %a' : 'lsof -ti:5173 | xargs kill -9 2>/dev/null || true'); console.log('✅ Dev ports cleared!');\"",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "vybcel": "^1.0.0",
     "@radix-ui/react-accordion": "^1.2.1",
     "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-avatar": "^1.1.1",
@@ -45,28 +45,31 @@
     "clsx": "^2.0.0",
     "cmdk": "^1.0.4",
     "lucide-react": "^0.294.0",
-    "recharts": "^2.12.7",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
     "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.12.7",
     "sonner": "^1.7.1",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "vaul": "^1.0.0"
+    "vaul": "^1.0.0",
+    "vybcel": "latest"
   },
   "devDependencies": {
+    "@types/node": "^20.0.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
-    "@types/node": "^20.0.0",
-    "@vitejs/plugin-react": "^4.2.1",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^7.0.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "^10.4.19",
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
-    "typescript": "^5.2.2",
-    "vite": "^5.2.0",
-    "tailwindcss": "^3.4.0",
     "postcss": "^8.4.38",
-    "autoprefixer": "^10.4.19"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.2.2",
+    "vite": "^5.4.19"
   }
 }
