--- a/turbo.json
+++ b/turbo.json
@@ -8,7 +8,8 @@
     },
     "dev": {
       "cache": false,
-      "persistent": true
+      "persistent": true,
+      "filter": "!./packages/dev-agent"
     },
     "lint": {
       "dependsOn": ["^build"]
