--- a/packages/storage/package.json
+++ b/packages/storage/package.json
@@ -14,10 +14,10 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.450.0"
+    "@aws-sdk/client-s3": "^3.450.0",
+    "tsup": "^8.0.1"
   },
   "devDependencies": {
-    "tsup": "^8.0.1",
     "typescript": "^5.3.0"
   },
   "exports": {
