--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,7 +56,10 @@
     "sonner": "^2.0.5",
     "tailwind-merge": "^2.0.0",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.1.0"
+    "uuid": "^11.1.0",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.4",
+    "tailwindcss": "^3.4.0"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.5.7",
@@ -64,12 +67,9 @@
     "@types/react": "^18.0.0",
     "@types/react-dom": "^18.0.0",
     "@typescript-eslint/parser": "^8.33.0",
-    "autoprefixer": "^10.4.21",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.3.3",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^3.4.0",
     "tsx": "^4.19.4",
     "typescript": "^5.0.0"
   }
