--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -59,18 +59,18 @@
     "uuid": "^11.1.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.4",
-    "tailwindcss": "^3.4.0"
+    "tailwindcss": "^3.4.0",
+    "typescript": "^5.0.0",
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0"
   },
   "devDependencies": {
     "@types/adm-zip": "^0.5.7",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
     "@typescript-eslint/parser": "^8.33.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.3.3",
     "eslint-plugin-unused-imports": "^4.1.4",
-    "tsx": "^4.19.4",
-    "typescript": "^5.0.0"
+    "tsx": "^4.19.4"
   }
 }
