--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -63,13 +63,13 @@
     "typescript": "^5.0.0",
     "@types/node": "^20.0.0",
     "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0"
+    "@types/react-dom": "^18.0.0",
+    "@types/adm-zip": "^0.5.7",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.3.3"
   },
   "devDependencies": {
-    "@types/adm-zip": "^0.5.7",
     "@typescript-eslint/parser": "^8.33.0",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.3.3",
     "eslint-plugin-unused-imports": "^4.1.4",
     "tsx": "^4.19.4"
   }
