--- a/apps/web/.eslintrc.json
+++ b/apps/web/.eslintrc.json
@@ -14,6 +14,7 @@
     ],
     "@typescript-eslint/no-unused-vars": "off",
     "react/no-unescaped-entities": "warn",
-    "react/display-name": "warn"
+    "react/display-name": "warn",
+    "@next/next/no-img-element": "off"
   }
 } 
