--- a/templates/vite-react/vybcel.config.json
+++ b/templates/vite-react/vybcel.config.json
@@ -2,6 +2,7 @@
   "projectId": "__PROJECT_ID__",
   "wsUrl": "__WS_URL__",
   "debug": "__DEBUG_MODE__",
+  "autoStartOnNewProject": true,
   "toolbar": {
     "enabled": true,
     "position": "top",
