--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -31,15 +31,23 @@
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.9",
     "@tanstack/react-query": "^5.79.0",
+    "@types/adm-zip": "^0.5.7",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/node": "^20.0.0",
     "@types/node-fetch": "^2.6.12",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@types/uuid": "^10.0.0",
+    "@vercel/functions": "^2.2.0",
     "adm-zip": "^0.5.16",
+    "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "csstype": "^3.1.3",
     "dotenv": "^16.5.0",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^15.3.3",
     "geist": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
@@ -47,6 +55,7 @@
     "next": "^15.1.0",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
+    "postcss": "^8.5.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-syntax-highlighter": "^15.6.1",
@@ -55,18 +64,10 @@
     "socket.io-client": "^4.8.1",
     "sonner": "^2.0.5",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.1.0",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.4",
     "tailwindcss": "^3.4.0",
+    "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.0.0",
-    "@types/node": "^20.0.0",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@types/adm-zip": "^0.5.7",
-    "eslint": "^8.57.0",
-    "eslint-config-next": "^15.3.3"
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "@typescript-eslint/parser": "^8.33.0",
