GitHub login support

--- a/env.example
+++ b/env.example
@@ -14,6 +14,10 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY=your-supabase-anon-key
 GOOGLE_OAUTH_CLIENT_ID=your-google-oauth-client-id
 GOOGLE_OAUTH_SECRET=your-google-oauth-secret
 
+# GitHub OAuth Configuration (для Supabase Auth)
+GITHUB_OAUTH_CLIENT_ID=your-github-oauth-client-id
+GITHUB_OAUTH_SECRET=your-github-oauth-secret
+
 # GitHub App Configuration (для автономной работы с GitHub API)
 GITHUB_APP_ID=
 GITHUB_APP_INSTALLATION_ID=
