--- a/packages/dev-agent/env.template
+++ b/packages/dev-agent/env.template
@@ -1,10 +1,10 @@
-# Vybcel Agent Configuration
+# Phion Agent Configuration
 
 # WebSocket server URL (required)  
-VYBCEL_WS_URL=ws://localhost:8080
+PHION_WS_URL=ws://localhost:8080
 
 # Production WebSocket URL (for deployed environments)
-# VYBCEL_WS_URL=wss://your-ws-server.railway.app
+# PHION_WS_URL=wss://your-ws-server.railway.app
 
 # Project ID (will be automatically set when downloading project)
-# VYBCEL_PROJECT_ID=your-project-id 
+# PHION_PROJECT_ID=your-project-id 
