--- a/env.example
+++ b/env.example
@@ -48,7 +48,7 @@ WEBSOCKET_SERVER_URL=http://localhost:8080
 
 # Environment Configuration (для правильного WebSocket URL в шаблонах)
 NODE_ENV=development  # для локальной разработки используем ws://localhost:8080
-# NODE_ENV=production  # для продакшена используем wss://api.vybcel.com
+# NODE_ENV=production  # для продакшена используем wss://api.phion.dev
 
 # Ngrok Configuration (для development webhooks)
 NGROK_AUTHTOKEN=your-ngrok-authtoken
