--- a/vybcel_architecture_part1.ini
+++ b/vybcel_architecture_part1.ini
@@ -2,22 +2,22 @@ sequenceDiagram
     participant U as 👤 Пользователь
     participant W as 🌐 Web App Next.js порт 3004
     participant V as 💻 VSCode/Cursor с Extension
-    participant T as 🛠️ Vybcel Toolbar (npm пакет)
-    participant C as 📦 CLI Agent (npm vybcel)
+    participant T as 🛠️ Phion Toolbar (npm пакет)
+    participant C as 📦 CLI Agent (npm phion)
     participant WS as 📡 WebSocket Server Railway порт 8080
     participant DB as 🗃️ Supabase PostgreSQL Database
     participant APP as 🤖 GitHub App ID 1390062
-    participant GH as 🐙 GitHub API организация vybcel
+    participant GH as 🐙 GitHub API организация phion
     participant N as 🔥 Netlify Deploy Service
 
-    Note over U,N: 🚀 VYBCEL PRODUCTION ARCHITECTURE - PART 1: PROJECT CREATION & SETUP
+    Note over U,N: 🚀 Phion PRODUCTION ARCHITECTURE - PART 1: PROJECT CREATION & SETUP
 
     %% === 0. PREDEFINED SETUP ===
     rect rgb(230, 230, 250)
         Note over APP,GH: 0️⃣ PREDEFINED SETUP - выполнено для платформы
         
-        Note over APP: GitHub App "Vybcel Bot" ID 1390062 создан и настроен
-        APP->>GH: Установлен в организацию vybcel с Installation ID 70719351
+        Note over APP: GitHub App "Phion Bot" ID 1390062 создан и настроен
+        APP->>GH: Установлен в организацию phion с Installation ID 70719351
         Note right of APP: User access not required - приложение работает автономно
         Note right of APP: Права: repo contents metadata webhooks
         
@@ -50,14 +50,14 @@ sequenceDiagram
         APP->>APP: POST /app/installations/70719351/access_tokens создает токен
         APP-->>WS: Возвращает installation_token действует 60 минут
         
-        WS->>GH: GitHub API POST /orgs/vybcel/repos создает приватный репозиторий
-        Note right of GH: Создается приватный репозиторий vybcel-project-{projectId}
+        WS->>GH: GitHub API POST /orgs/phion/repos создает приватный репозиторий
+        Note right of GH: Создается приватный репозиторий phion-project-{projectId}
         Note right of GH: Authorization Bearer {installation_token} + auto_init true
-        GH->>GH: Инициализация репозитория с initial commit и README в организации vybcel
+        GH->>GH: Инициализация репозитория с initial commit и README в организации phion
         GH-->>WS: Возвращает github_repo_url clone_url и repo details
         
         WS->>DB: ProjectQueries.updateGitHubInfo обновляет проект с данными GitHub
-        Note right of DB: Сохраняет github_repo_url github_repo_name owner vybcel
+        Note right of DB: Сохраняет github_repo_url github_repo_name owner phion
         
         WS-->>W: Возвращает успешный ответ с данными репозитория
         Note right of W: Получает github_repo_url github_repo_name для дальнейшего использования
@@ -79,31 +79,31 @@ sequenceDiagram
         par Фоновый процесс initializeProjectInBackground в Railway
             WS->>WS: generateTemplateFiles создает файлы шаблона проекта
             Note right of WS: Берет шаблон из папки templates/vite-react и настраивает его
-            WS->>WS: Заменяет __PROJECT_ID__ на реальный ID в vybcel.config.json
+            WS->>WS: Заменяет __PROJECT_ID__ на реальный ID в phion.config.json
             WS->>WS: Заменяет __WS_URL__ на URL WebSocket сервера
             
             WS->>WS: import('./services/github.js') динамический импорт GitHub сервиса
             Note right of WS: Railway окружение поддерживает полный Node.js функционал
             
-            WS->>GH: GitHub API GET /repos/vybcel/repo/git/refs/heads/main получает parent commit
+            WS->>GH: GitHub API GET /repos/phion/repo/git/refs/heads/main получает parent commit
             Note right of GH: Получает SHA последнего коммита для создания нового коммита
             GH-->>WS: Возвращает parent commit SHA для tree API
             
             loop Обработка файлов чанками по 5 штук
-                WS->>GH: GitHub API POST /repos/vybcel/repo/git/blobs создает 5 blobs
+                WS->>GH: GitHub API POST /repos/phion/repo/git/blobs создает 5 blobs
                 Note right of GH: Создает blob объекты для чанка файлов с задержкой 100ms
                 GH-->>WS: Возвращает SHA для каждого blob объекта в чанке
             end
             
-            WS->>GH: GitHub API POST /repos/vybcel/repo/git/trees создает tree со всеми файлами
+            WS->>GH: GitHub API POST /repos/phion/repo/git/trees создает tree со всеми файлами
             Note right of GH: Создает tree объект содержащий все файлы проекта
             GH-->>WS: Возвращает tree SHA
             
-            WS->>GH: GitHub API POST /repos/vybcel/repo/git/commits создает единый коммит
+            WS->>GH: GitHub API POST /repos/phion/repo/git/commits создает единый коммит
             Note right of GH: Создает один коммит со всеми файлами шаблона + parent commit SHA
             GH-->>WS: Возвращает commit SHA
             
-            WS->>GH: GitHub API PATCH /repos/vybcel/repo/git/refs/heads/main обновляет main
+            WS->>GH: GitHub API PATCH /repos/phion/repo/git/refs/heads/main обновляет main
             Note right of GH: Обновляет main ветку на новый коммит
             GH-->>WS: Подтверждение обновления main ветки
             
@@ -139,7 +139,7 @@ sequenceDiagram
             W->>GH: downloadProjectFromGitHub получает свежий ZIP из репозитория
             GH-->>W: Отправляет содержимое main ветки как ZIP архив
             W-->>U: Браузер скачивает project.zip на компьютер пользователя
-            Note right of U: Проект содержит все файлы шаблона + vybcel агент с PROJECT_ID + VS Code extension
+            Note right of U: Проект содержит все файлы шаблона + phion агент с PROJECT_ID + VS Code extension
         end
     end
 
@@ -147,20 +147,20 @@ sequenceDiagram
     rect rgb(250, 255, 250)
         Note over U,C: 2️⃣ ЛОКАЛЬНАЯ НАСТРОЙКА - распаковка проекта и запуск синхронизации
         U->>U: Распаковывает ZIP архив в папку проекта на компьютере
-        Note right of U: Получает готовую папку с package.json vybcel агент и git remote
+        Note right of U: Получает готовую папку с package.json phion агент и git remote
         
         U->>V: Открывает папку проекта в редакторе VSCode или Cursor
         Note right of V: Редактор показывает структуру проекта и готов к редактированию
-        Note right of V: VS Code Extension автоматически определяет Vybcel проект через vybcel.config.json
+        Note right of V: VS Code Extension автоматически определяет Phion проект через phion.config.json
         
-        V->>V: VSCode Extension активируется при обнаружении vybcel.config.json
+        V->>V: VSCode Extension активируется при обнаружении phion.config.json
         Note right of V: Файл расширения: templates/vite-react/scripts/auto-browser-extension/extension.js
-        Note right of V: Команды: vybcel.startProject, vybcel.openPreview, vybcel.fixConnection
+        Note right of V: Команды: phion.startProject, phion.openPreview, phion.fixConnection
         Note right of V: Расположение: scripts/auto-browser-extension/ внутри проекта
         
         U->>U: Выполняет команды в терминале для установки зависимостей
-        Note right of U: pnpm install устанавливает все зависимости проекта включая vybcel
-        Note right of U: vybcel пакет содержит CLI агент и Vite plugin с toolbar
+        Note right of U: pnpm install устанавливает все зависимости проекта включая phion
+        Note right of U: phion пакет содержит CLI агент и Vite plugin с toolbar
         
         U->>U: Запускает команду pnpm start для старта разработки
         Note right of U: Команда запускает одновременно pnpm dev и pnpm sync
@@ -171,14 +171,14 @@ sequenceDiagram
             Note right of V: Отслеживает запущенные проекты чтобы избежать дублирования auto-start
             
             alt Первое открытие проекта (AUTO_START_NEW_PROJECT = true)
-                V->>V: Extension автоматически выполняет команду vybcel.startProject
+                V->>V: Extension автоматически выполняет команду phion.startProject
                 Note right of V: Создает терминал и запускает "pnpm start"
                 V->>V: markProjectAsStarted(context) запоминает проект как запущенный
                 
                 V->>V: startServerMonitoring() начинает мониторинг localhost:5173
                 Note right of V: Опрашивает dev сервер каждые 2 секунды ожидая готовности
                 
-                V->>V: Когда сервер готов, автоматически выполняет vybcel.openPreview
+                V->>V: Когда сервер готов, автоматически выполняет phion.openPreview
                 Note right of V: Открывает http://localhost:5173 в VS Code Simple Browser
                 Note right of V: Оптимизирует workspace: закрывает sidebar, terminal, открывает AI chat
             else Проект уже запускался ранее
@@ -188,10 +188,10 @@ sequenceDiagram
         end
         
         par CLI Agent запуск
-            C->>C: Vybcel CLI агент запускается командой pnpm sync (которая вызывает "vybcel")
+            C->>C: Phion CLI агент запускается командой pnpm sync (которая вызывает "phion")
             Note right of C: CLI файл: packages/dev-agent/src/cli.ts с bin командой
-            Note right of C: Читает конфигурацию из vybcel.config.json
-            Note right of C: npm пакет "vybcel" версии latest установлен в проекте
+            Note right of C: Читает конфигурацию из phion.config.json
+            Note right of C: npm пакет "phion" версии latest установлен в проекте
             
             C->>C: checkGitRepository проверяет наличие git репозитория
             Note right of C: Если .git не найден, инициализирует репозиторий автоматически
@@ -244,7 +244,7 @@ sequenceDiagram
         
         par Toolbar интеграция
             T->>T: Toolbar инициализируется автоматически при загрузке страницы
-            Note right of T: Vite plugin из npm пакета vybcel автоматически внедряет toolbar
+            Note right of T: Vite plugin из npm пакета phion автоматически внедряет toolbar
             Note right of T: НЕТ системы автообновления - toolbar распространяется через npm
             Note right of T: packages/dev-agent/src/plugin.ts обслуживает toolbar из npm пакета
             
