--- a/vybcel_architecture_part2.ini
+++ b/vybcel_architecture_part2.ini
@@ -2,15 +2,15 @@ sequenceDiagram
     participant U as 👤 Пользователь
     participant W as 🌐 Web App Next.js порт 3004
     participant V as 💻 VSCode/Cursor с Extension
-    participant T as 🛠️ Vybcel Toolbar (npm пакет)
-    participant C as 📦 CLI Agent (npm vybcel)
+    participant T as 🛠️ Phion Toolbar (npm пакет)
+    participant C as 📦 CLI Agent (npm phion)
     participant WS as 📡 WebSocket Server Railway порт 8080
     participant DB as 🗃️ Supabase PostgreSQL Database
     participant APP as 🤖 GitHub App ID 1390062
-    participant GH as 🐙 GitHub API организация vybcel
+    participant GH as 🐙 GitHub API организация phion
     participant N as 🔥 Netlify Deploy Service
 
-    Note over U,N: 🚀 VYBCEL PRODUCTION ARCHITECTURE - PART 2: FILE OPERATIONS & PROJECT MANAGEMENT
+    Note over U,N: 🚀 PHION PRODUCTION ARCHITECTURE - PART 2: FILE OPERATIONS & PROJECT MANAGEMENT
 
     %% === 4. SAVE ALL CHANGES (COMMIT) ===
     rect rgb(240, 255, 240)
@@ -41,18 +41,18 @@ sequenceDiagram
             
             WS->>DB: ProjectQueries.getProjectById получает данные GitHub репозитория
             Note right of DB: Возвращает github_repo_url owner repo_name для коммита
-            DB-->>WS: Объект проекта с github_repo_url owner vybcel repo_name
+            DB-->>WS: Объект проекта с github_repo_url owner phion repo_name
             
             loop Для каждого измененного файла
-                WS->>GH: GitHub API PUT /repos/vybcel/repo/contents/filePath
+                WS->>GH: GitHub API PUT /repos/phion/repo/contents/filePath
                 Note right of GH: Отправляет ПОЛНОЕ СОДЕРЖИМОЕ ФАЙЛА через GitHub App token
                 Note right of GH: Authorization Bearer {installation_token}
                 GH-->>WS: Возвращает новый file sha в репозитории
             end
             
-            WS->>GH: GitHub API POST /repos/vybcel/repo/git/refs/heads/main обновляет main
+            WS->>GH: GitHub API POST /repos/phion/repo/git/refs/heads/main обновляет main
             Note right of GH: Создает один коммит "Save project changes" со всеми файлами
-            GH->>GH: Коммит появляется в main ветке репозитория организации vybcel
+            GH->>GH: Коммит появляется в main ветке репозитория организации phion
             GH-->>WS: Возвращает commit sha commit_url и tree_sha
             
             WS->>DB: CommitHistoryQueries.createCommitHistory создает запись коммита
@@ -100,7 +100,7 @@ sequenceDiagram
                 Note right of C: git fetch + git reset --hard FETCH_HEAD (избегает merge conflicts)
                 C-->>WS: emit pull_completed подтверждает синхронизацию
             else Альтернативно - перезапись файлов через WebSocket
-                WS->>GH: GitHub API GET /repos/vybcel/repo/contents для измененных файлов
+                WS->>GH: GitHub API GET /repos/phion/repo/contents для измененных файлов
                 GH-->>WS: Возвращает актуальное содержимое файлов из GitHub
                 
                 WS->>C: emit update_local_files отправляет новое содержимое файлов
@@ -262,16 +262,16 @@ sequenceDiagram
         Note right of W: Открывает Netlify URL в новой вкладке браузера
         
         U->>W: Клик кнопки "View on GitHub"
-        Note right of W: Открывает GitHub репозиторий vybcel-project-{id}
+        Note right of W: Открывает GitHub репозиторий phion-project-{id}
         W-->>U: Пользователь видит приватный репозиторий но НЕ МОЖЕТ пушить в него
         Note right of U: Полная прозрачность изменений через GitHub интерфейс
         
         alt VS Code Extension Preview интеграция
             U->>V: Использует VS Code Extension для открытия preview
-            V->>V: Extension выполняет команду vybcel.openPreview
+            V->>V: Extension выполняет команду phion.openPreview
             Note right of V: Открывает localhost:5173 в VS Code Simple Browser
             Note right of V: Оптимизирует layout workspace для разработки
-            V->>V: Также может использовать vybcel.fixConnection для очистки портов
+            V->>V: Также может использовать phion.fixConnection для очистки портов
         end
     end
 
@@ -308,7 +308,7 @@ sequenceDiagram
             Note right of APP: Генерирует JWT и получает installation token на 60 минут
             APP-->>W: Возвращает installation_token для авторизации удаления
             
-            W->>GH: DELETE /repos/vybcel/{github_repo_name} удаляет репозиторий
+            W->>GH: DELETE /repos/phion/{github_repo_name} удаляет репозиторий
             Note right of GH: Authorization Bearer {installation_token}
             Note right of GH: Полностью удаляет приватный репозиторий из организации
             GH->>GH: Удаляет все файлы историю коммитов issues PRs webhooks
@@ -357,16 +357,16 @@ sequenceDiagram
         Note right of W: API endpoint /api/notify-status-change для уведомлений между сервисами
         
         Note over U,W: NPM ДИСТРИБУЦИЯ АРХИТЕКТУРА
-        Note right of U: Toolbar распространяется через npm пакет "vybcel" не систему автообновления
+        Note right of U: Toolbar распространяется через npm пакет "phion" не систему автообновления
         Note right of U: Нет R2 Storage для версий toolbar - упрощенная архитектура
-        Note right of U: Пользователи обновляют toolbar обновляя npm пакет: pnpm update vybcel
-        Note right of U: Vite plugin из vybcel пакета обслуживает toolbar из node_modules
+        Note right of U: Пользователи обновляют toolbar обновляя npm пакет: pnpm update phion
+        Note right of U: Vite plugin из phion пакета обслуживает toolbar из node_modules
         Note right of U: packages/dev-agent/src/plugin.ts обрабатывает интеграцию toolbar
         Note right of U: VS Code Extension встроен в template для улучшенной разработки
         
         Note over U,W: VS CODE ИНТЕГРАЦИЯ АРХИТЕКТУРА
         Note right of V: Расположение Extension: templates/vite-react/scripts/auto-browser-extension/
-        Note right of V: Авто-определяет Vybcel проекты через наличие vybcel.config.json
+        Note right of V: Авто-определяет Phion проекты через наличие phion.config.json
         Note right of V: Авто-старт новых проектов с pnpm start (настраивается)
         Note right of V: Авто-открытие preview в VS Code Simple Browser
         Note right of V: Оптимизация workspace: закрывает sidebar, terminal, открывает AI chat
@@ -376,7 +376,7 @@ sequenceDiagram
         Note over U,W: КЛЮЧЕВЫЕ АРХИТЕКТУРНЫЕ ОСОБЕННОСТИ
         Note right of U: Пользователь НИКОГДА не логинится в GitHub
         Note right of U: Все GitHub операции через платформенный GitHub App
-        Note right of U: Приватные репозитории в организации vybcel
+        Note right of U: Приватные репозитории в организации phion
         Note right of U: Netlify автоматически настроен с deploy keys для чтения
         Note right of U: Коммит в main = сохранение проекта + авто-деплой
         Note right of U: Staging area позволяет накапливать изменения и откатывать их
