--- a/.gitignore
+++ b/.gitignore
@@ -75,7 +75,7 @@ jspm_packages/
 
 # Gatsby files
 .cache/
-public
+# public (commented out for Next.js - we need public/ folder)
 
 # Storybook build outputs
 .out
