--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.478.0",
     "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-radio-group": "^1.3.7",
     "@radix-ui/react-scroll-area": "^1.2.9",
     "@radix-ui/react-separator": "^1.1.7",
     "@types/jsonwebtoken": "^9.0.9",
