--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -56,6 +56,7 @@
     "dotenv": "^16.5.0",
     "eslint": "^8.57.0",
     "eslint-config-next": "^15.3.3",
+    "framer-motion": "^12.19.1",
     "geist": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.294.0",
