--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ node_modules/
 dist/
 build/
 out/
+!**/auto-browser-extension/out
 
 # Environment variables
 .env
@@ -108,3 +109,4 @@ temp/
 *.db
 *.sqlite
 
+*.vsix
