--- a/templates/vite-react/package.json
+++ b/templates/vite-react/package.json
@@ -46,7 +46,7 @@
     "cmdk": "^1.0.4",
     "lucide-react": "^0.294.0",
     "motion": "^12.18.1",
-    "phion": "0.0.4-beta.8",
+    "phion": "latest",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.2",
